# caos-clang-tidy

./: CMakeLists.txt  README.md  build.sh  prepare.sh  update-headers.sh
caos/: CMakeLists.txt  CaosTidyModule.cpp  IdentifierNamingCheck.cpp  IdentifierNamingCheck.h  MagicNumbersCheck.cpp  MagicNumbersCheck.h
clang-tidy/: ClangTidyCheck.h  ClangTidyDiagnosticConsumer.h  ClangTidyOptions.h  ClangTidyProfiling.h
clang-tidy/utils/: RenamerClangTidyCheck.h
plugin/: CMakeLists.txt  FooCheck.h  MagicNumbersCheck.cpp  MagicNumbersCheck.h  PluginTidyModule.cpp
test/: .clang-tidy  call_open.c  main.c  main.cpp
